cabal-version:      2.4
name:               LambdaCryptor
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             master-spike
maintainer:         najeeb.al.shabibi@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable LambdaCryptor
    main-is:          Main.hs
    
    -- Modules included in this executable, other than Main.
    other-modules: Util.CryptoMath, Util.RSA, Util.Modes

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0, random, bytestring, utf8-string
    hs-source-dirs:   app
    default-language: Haskell2010
